Refactor and harden EnthusiaCommend