@@ -1,190 +1,182 @@
-// src/main/java/org/enthusia/commend/rep/RepService.java
 package org.enthusia.rep.rep;
 
-import org.bukkit.Bukkit;
-import org.bukkit.OfflinePlayer;
-import org.bukkit.configuration.ConfigurationSection;
-import org.bukkit.configuration.file.YamlConfiguration;
-import org.enthusia.rep.CommendPlugin;
-import org.enthusia.rep.config.RepConfig;
 import net.md_5.bungee.api.chat.ClickEvent;
 import net.md_5.bungee.api.chat.ComponentBuilder;
 import net.md_5.bungee.api.chat.HoverEvent;
+import org.bukkit.Bukkit;
+import org.bukkit.OfflinePlayer;
+import org.bukkit.entity.Player;
+import org.enthusia.rep.CommendPlugin;
+import org.enthusia.rep.config.RepConfig;
+import org.enthusia.rep.storage.PluginDataSnapshot;
 
-import java.io.File;
-import java.io.IOException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.UUID;
+import java.util.function.Consumer;
 
-public class RepService {
+public final class RepService {
 
     private final CommendPlugin plugin;
-    private final File repFile;
-    private final File commendationFile;
-    private final File removedFile;
-    private final Map<UUID, Integer> repMap = new ConcurrentHashMap<>();
-
-    private final Map<UUID, List<Commendation>> byTarget = new ConcurrentHashMap<>();
-    private final Map<UUID, Map<UUID, Commendation>> byGiver = new ConcurrentHashMap<>();
-    private final Map<String, Long> removalCooldown = new ConcurrentHashMap<>();
-
-    private final Map<String, List<AltRepRecord>> altRecords = new ConcurrentHashMap<>();
-    private final List<SuspiciousRepCase> suspiciousCases = Collections.synchronizedList(new ArrayList<>());
-    private final List<RemovedRep> removedLog = Collections.synchronizedList(new ArrayList<>());
+    private final Runnable dirtyMarker;
+    private final Consumer<UUID> scoreChangeListener;
 
     private RepConfig repConfig;
 
-    public RepService(CommendPlugin plugin) {
+    private final Map<UUID, Integer> scoreByPlayer = new HashMap<>();
+    private final Map<UUID, List<Commendation>> commendationsByTarget = new HashMap<>();
+    private final Map<UUID, Map<UUID, Commendation>> commendationsByGiver = new HashMap<>();
+    private final Map<String, Long> removalCooldowns = new HashMap<>();
+    private final Map<String, List<AltRepRecord>> altRecordsByHash = new HashMap<>();
+    private final List<SuspiciousRepCase> suspiciousCases = new ArrayList<>();
+    private final List<RemovedRep> removedEntries = new ArrayList<>();
+
+    public RepService(
+            CommendPlugin plugin,
+            RepConfig repConfig,
+            PluginDataSnapshot dataSnapshot,
+            Runnable dirtyMarker,
+            Consumer<UUID> scoreChangeListener
+    ) {
         this.plugin = plugin;
-        this.repConfig = plugin.getRepConfig();
-        this.repFile = new File(plugin.getDataFolder(), "reputation.yml");
-        this.commendationFile = new File(plugin.getDataFolder(), "commendations.yml");
-        this.removedFile = new File(plugin.getDataFolder(), "removed-rep.yml");
-        loadRepScores();
-        loadCommendations();
-        loadRemoved();
+        this.repConfig = repConfig;
+        this.dirtyMarker = dirtyMarker;
+        this.scoreChangeListener = scoreChangeListener;
+        loadSnapshot(dataSnapshot);
     }
 
-    private void loadRepScores() {
-        if (!repFile.exists()) return;
-        YamlConfiguration cfg = YamlConfiguration.loadConfiguration(repFile);
-        for (String key : cfg.getKeys(false)) {
-            try {
-                UUID uuid = UUID.fromString(key);
-                int score = cfg.getInt(key + ".score", 0);
-                repMap.put(uuid, score);
-            } catch (IllegalArgumentException ignored) {
+    public void reload(RepConfig repConfig) {
+        this.repConfig = repConfig;
+    }
+
+    private void loadSnapshot(PluginDataSnapshot snapshot) {
+        scoreByPlayer.clear();
+        scoreByPlayer.putAll(snapshot.scores());
+
+        commendationsByTarget.clear();
+        commendationsByGiver.clear();
+        for (Commendation commendation : snapshot.commendations()) {
+            cacheCommendation(cloneCommendation(commendation), false);
+        }
+
+        removedEntries.clear();
+        removedEntries.addAll(snapshot.removedEntries().stream().map(RemovedRep::copy).toList());
+        removalCooldowns.clear();
+        altRecordsByHash.clear();
+        suspiciousCases.clear();
+    }
+
+    public PluginDataSnapshot snapshot(PluginDataSnapshot base) {
+        Map<UUID, Integer> scores = new LinkedHashMap<>(scoreByPlayer);
+        List<Commendation> commendations = new ArrayList<>();
+        for (List<Commendation> entries : commendationsByTarget.values()) {
+            for (Commendation commendation : entries) {
+                commendations.add(cloneCommendation(commendation));
             }
         }
+        commendations.sort(Comparator.comparingLong(Commendation::getCreatedAt));
+
+        List<RemovedRep> removed = removedEntries.stream().map(RemovedRep::copy).toList();
+        return new PluginDataSnapshot(scores, commendations, removed, base.stalkEntries());
     }
 
-    private void loadCommendations() {
-        if (!commendationFile.exists()) return;
-        YamlConfiguration cfg = YamlConfiguration.loadConfiguration(commendationFile);
-        ConfigurationSection root = cfg.getConfigurationSection("commendations");
-        if (root == null) return;
+    public int getScore(UUID playerId) {
+        return scoreByPlayer.getOrDefault(playerId, 0);
+    }
 
-        for (String idKey : root.getKeys(false)) {
-            ConfigurationSection sec = root.getConfigurationSection(idKey);
-            Commendation c = Commendation.fromSection(sec);
-            if (c != null) {
-                cacheCommendation(c, false);
+    public void setScore(UUID playerId, int score) {
+        applyScore(playerId, score, true);
+    }
+
+    public void adjustScore(UUID playerId, int delta) {
+        if (delta == 0) {
+            return;
+        }
+        applyScore(playerId, getScore(playerId) + delta, true);
+    }
+
+    private void applyScore(UUID playerId, int newScore, boolean emitEvent) {
+        int oldScore = getScore(playerId);
+        scoreByPlayer.put(playerId, newScore);
+        if (oldScore != newScore) {
+            dirtyMarker.run();
+            if (emitEvent) {
+                Bukkit.getPluginManager().callEvent(new org.enthusia.rep.events.RepMilestoneReachedEvent(playerId, oldScore, newScore));
             }
+            scoreChangeListener.accept(playerId);
         }
     }
 
-    private void loadRemoved() {
-        if (!removedFile.exists()) return;
-        YamlConfiguration cfg = YamlConfiguration.loadConfiguration(removedFile);
-        List<Map<?, ?>> list = cfg.getMapList("removed");
-        for (Map<?, ?> map : list) {
-            RemovedRep rep = RemovedRep.fromMap(map);
-            if (rep != null) removedLog.add(rep);
-        }
+    public Commendation getCommendation(UUID giverId, UUID targetId) {
+        Map<UUID, Commendation> given = commendationsByGiver.get(giverId);
+        return given == null ? null : given.get(targetId);
     }
 
-    public void saveAll() {
-        YamlConfiguration cfg = new YamlConfiguration();
-        for (Map.Entry<UUID, Integer> entry : repMap.entrySet()) {
-            String key = entry.getKey().toString();
-            cfg.set(key + ".score", entry.getValue());
-        }
-        try {
-            cfg.save(repFile);
-        } catch (IOException e) {
-            plugin.getLogger().warning("Failed to save reputation.yml: " + e.getMessage());
-        }
-
-        YamlConfiguration commendCfg = new YamlConfiguration();
-        int counter = 0;
-        for (List<Commendation> list : byTarget.values()) {
-            for (Commendation c : list) {
-                String path = "commendations." + (counter++);
-                commendCfg.createSection(path, c.serialize());
-            }
-        }
-        try {
-            commendCfg.save(commendationFile);
-        } catch (IOException e) {
-            plugin.getLogger().warning("Failed to save commendations.yml: " + e.getMessage());
-        }
-
-        YamlConfiguration removedCfg = new YamlConfiguration();
-        List<Map<String, Object>> removed = new ArrayList<>();
-        for (RemovedRep rep : removedLog) {
-            removed.add(rep.serialize());
-        }
-        removedCfg.set("removed", removed);
-        try {
-            removedCfg.save(removedFile);
-        } catch (IOException e) {
-            plugin.getLogger().warning("Failed to save removed-rep.yml: " + e.getMessage());
-        }
-    }
-
-    public int getScore(UUID uuid) {
-        return repMap.getOrDefault(uuid, 0);
-    }
-
-    public void setScore(UUID uuid, int score) {
-        repMap.put(uuid, score);
-    }
-
-    public void adjustScore(UUID uuid, int delta) {
-        repMap.put(uuid, getScore(uuid) + delta);
-    }
-
-    public Commendation getCommendation(UUID giver, UUID target) {
-        Map<UUID, Commendation> map = byGiver.get(giver);
-        if (map == null) return null;
-        return map.get(target);
-    }
-
-    public List<Commendation> getCommendationsAbout(UUID target) {
-        return byTarget.getOrDefault(target, Collections.emptyList());
+    public List<Commendation> getCommendationsAbout(UUID targetId) {
+        List<Commendation> commendations = commendationsByTarget.get(targetId);
+        return commendations == null ? List.of() : List.copyOf(commendations);
     }
 
     public List<Map.Entry<UUID, Integer>> top(int limit, boolean lowest) {
-        Comparator<Map.Entry<UUID, Integer>> cmp = Map.Entry.comparingByValue();
-        if (!lowest) cmp = cmp.reversed();
-        return repMap.entrySet().stream()
-                .sorted(cmp)
-                .limit(limit)
+        Comparator<Map.Entry<UUID, Integer>> comparator = Map.Entry.comparingByValue();
+        if (!lowest) {
+            comparator = comparator.reversed();
+        }
+        return scoreByPlayer.entrySet().stream()
+                .sorted(comparator)
+                .limit(Math.max(1, limit))
                 .toList();
     }
 
-    public String nameOf(UUID uuid) {
-        OfflinePlayer off = Bukkit.getOfflinePlayer(uuid);
-        return off.getName() != null ? off.getName() : uuid.toString().substring(0, 8);
+    public String nameOf(UUID playerId) {
+        OfflinePlayer player = Bukkit.getOfflinePlayer(playerId);
+        return player.getName() != null ? player.getName() : playerId.toString().substring(0, 8);
     }
 
-    public CommendationResult addOrUpdateCommendation(UUID giver,
-                                                      UUID target,
-                                                      boolean positive,
-                                                      RepCategory category,
-                                                      String reasonText,
-                                                      String ipHash) {
+    public CommendationResult addOrUpdateCommendation(
+            UUID giverId,
+            UUID targetId,
+            boolean positive,
+            RepCategory category,
+            String reasonText,
+            String ipHash
+    ) {
         long now = System.currentTimeMillis();
-        Commendation existing = getCommendation(giver, target);
+        Commendation existing = getCommendation(giverId, targetId);
+
         if (existing == null) {
-            long remainingCd = getRemovalCooldownMillis(giver, target);
-            if (remainingCd > 0) {
-                return CommendationResult.cooldown(remainingCd);
+            long remainingCooldown = getRemovalCooldownMillis(giverId, targetId);
+            if (remainingCooldown > 0) {
+                return CommendationResult.cooldown(remainingCooldown);
             }
-            Commendation c = new Commendation(giver, target, positive, category, reasonText, now, now, ipHash);
-            cacheCommendation(c, true);
-            adjustScore(target, positive ? 1 : -1);
-            logAltRecord(ipHash, giver, target, positive, now);
-            removalCooldown.remove(key(giver, target));
-            notifyTeleport(target);
-            return CommendationResult.created(c);
+
+            Commendation created = new Commendation(giverId, targetId, positive, category, reasonText, now, now, ipHash);
+            cacheCommendation(created, true);
+            applyScore(targetId, getScore(targetId) + (positive ? 1 : -1), true);
+            logAltRecord(ipHash, giverId, targetId, positive, now);
+            removalCooldowns.remove(key(giverId, targetId));
+            dirtyMarker.run();
+
+            Bukkit.getPluginManager().callEvent(new org.enthusia.rep.events.CommendationGivenEvent(giverId, targetId, positive));
+            Bukkit.getPluginManager().callEvent(new org.enthusia.rep.events.CommendationReceivedEvent(targetId, giverId, positive, getScore(targetId)));
+            return CommendationResult.created(created);
         }
 
-        long sinceEdit = now - existing.getLastEditedAt();
-        if (sinceEdit < repConfig.getEditCooldownMillis()) {
-            return CommendationResult.cooldown(repConfig.getEditCooldownMillis() - sinceEdit);
+        long sinceLastEdit = now - existing.getLastEditedAt();
+        if (sinceLastEdit < repConfig.getEditCooldownMillis()) {
+            return CommendationResult.cooldown(repConfig.getEditCooldownMillis() - sinceLastEdit);
         }
 
         int delta = 0;
@@ -196,278 +188,300 @@ public class RepService {
         existing.setReasonText(reasonText);
         existing.setLastEditedAt(now);
         existing.setIpHash(ipHash);
-        adjustScore(target, delta);
-        logAltRecord(ipHash, giver, target, positive, now);
         if (delta != 0) {
-            notifyTeleport(target);
+            applyScore(targetId, getScore(targetId) + delta, true);
         }
-        removalCooldown.remove(key(giver, target));
+        logAltRecord(ipHash, giverId, targetId, positive, now);
+        removalCooldowns.remove(key(giverId, targetId));
+        dirtyMarker.run();
+
+        Bukkit.getPluginManager().callEvent(new org.enthusia.rep.events.CommendationEditedEvent(giverId, targetId, positive));
         return CommendationResult.updated(existing, delta);
     }
 
-    private void notifyTeleport(UUID target) {
-        if (plugin.getTeleportIntegration() != null) {
-            plugin.getTeleportIntegration().updatePlayer(target);
-        }
+    public void removeCommendation(UUID giverId, UUID targetId) {
+        removeCommendationInternal(giverId, targetId, false, false, null);
     }
 
-    private void cacheCommendation(Commendation c, boolean replace) {
-        byTarget.computeIfAbsent(c.getTarget(), k -> new ArrayList<>());
-        byGiver.computeIfAbsent(c.getGiver(), k -> new HashMap<>());
+    public void removeCommendationWithCooldown(UUID giverId, UUID targetId) {
+        removeCommendationInternal(giverId, targetId, true, false, null);
+    }
 
-        // if replacing, remove old from target list
-        if (replace) {
-            Commendation old = byGiver.get(c.getGiver()).get(c.getTarget());
-            if (old != null) {
-                byTarget.get(c.getTarget()).removeIf(cm -> cm.getGiver().equals(c.getGiver()));
+    public RemovedRep removeCommendationLogged(UUID removerId, UUID giverId, UUID targetId, boolean applyCooldown) {
+        return removeCommendationInternal(giverId, targetId, applyCooldown, true, removerId);
+    }
+
+    private RemovedRep removeCommendationInternal(UUID giverId, UUID targetId, boolean applyCooldown, boolean logRemoval, UUID removerId) {
+        Commendation existing = getCommendation(giverId, targetId);
+        if (existing == null) {
+            return null;
+        }
+
+        Map<UUID, Commendation> byGiver = commendationsByGiver.get(giverId);
+        if (byGiver != null) {
+            byGiver.remove(targetId);
+            if (byGiver.isEmpty()) {
+                commendationsByGiver.remove(giverId);
             }
         }
 
-        byTarget.get(c.getTarget()).add(c);
-        byGiver.get(c.getGiver()).put(c.getTarget(), c);
-    }
-
-    public void removeCommendation(UUID giver, UUID target) {
-        removeCommendationInternal(giver, target);
-    }
-
-    public void removeCommendationWithCooldown(UUID giver, UUID target) {
-        Commendation removed = removeCommendationInternal(giver, target);
-        if (removed != null) {
-            removalCooldown.put(key(giver, target), System.currentTimeMillis());
+        List<Commendation> byTarget = commendationsByTarget.get(targetId);
+        if (byTarget != null) {
+            byTarget.removeIf(commendation -> commendation.getGiver().equals(giverId));
+            if (byTarget.isEmpty()) {
+                commendationsByTarget.remove(targetId);
+            }
         }
+
+        applyScore(targetId, getScore(targetId) + (existing.isPositive() ? -1 : 1), true);
+        if (applyCooldown) {
+            removalCooldowns.put(key(giverId, targetId), System.currentTimeMillis());
+        } else {
+            removalCooldowns.remove(key(giverId, targetId));
+        }
+
+        RemovedRep removedRep = null;
+        if (logRemoval) {
+            removedRep = new RemovedRep(nextRemovalId(), cloneCommendation(existing), System.currentTimeMillis(), removerId);
+            removedEntries.add(removedRep);
+        }
+
+        dirtyMarker.run();
+        return removedRep;
     }
 
-    public boolean canEdit(UUID giver, UUID target) {
-        Commendation existing = getCommendation(giver, target);
-        long now = System.currentTimeMillis();
+    public boolean canEdit(UUID giverId, UUID targetId) {
+        Commendation existing = getCommendation(giverId, targetId);
         if (existing != null) {
-            long since = now - existing.getLastEditedAt();
-            return since >= repConfig.getEditCooldownMillis();
+            return System.currentTimeMillis() - existing.getLastEditedAt() >= repConfig.getEditCooldownMillis();
         }
-        return getRemovalCooldownMillis(giver, target) <= 0;
+        return getRemovalCooldownMillis(giverId, targetId) <= 0L;
     }
 
-    public long getRemovalCooldownMillis(UUID giver, UUID target) {
-        Long ts = removalCooldown.get(key(giver, target));
-        if (ts == null) return 0;
-        long remaining = repConfig.getEditCooldownMillis() - (System.currentTimeMillis() - ts);
-        if (remaining <= 0) {
-            removalCooldown.remove(key(giver, target));
-            return 0;
+    public long getRemovalCooldownMillis(UUID giverId, UUID targetId) {
+        Long removedAt = removalCooldowns.get(key(giverId, targetId));
+        if (removedAt == null) {
+            return 0L;
+        }
+        long remaining = repConfig.getEditCooldownMillis() - (System.currentTimeMillis() - removedAt);
+        if (remaining <= 0L) {
+            removalCooldowns.remove(key(giverId, targetId));
+            return 0L;
         }
         return remaining;
     }
 
-    private String key(UUID giver, UUID target) {
-        return giver.toString() + "->" + target.toString();
-    }
-
-    public void resetAll(UUID target) {
-        List<Commendation> list = byTarget.remove(target);
-        if (list != null) {
-            for (Commendation c : list) {
-                removeCommendationLogged(null, c.getGiver(), target, false);
-            }
-        }
-        notifyTeleport(target);
-    }
-
-    private void logAltRecord(String ipHash, UUID giver, UUID target, boolean positive, long time) {
-        if (ipHash == null || ipHash.isEmpty()) return;
-        AltRepRecord record = new AltRepRecord(giver, target, positive, time, ipHash);
-        altRecords.computeIfAbsent(ipHash, k -> new ArrayList<>()).add(record);
-
-        // crude detection: 2+ accounts on same hash downrepping same target within 48h
-        if (!positive) {
-            List<AltRepRecord> list = altRecords.get(ipHash);
-            if (list == null) return;
-            long window = 48L * 60L * 60L * 1000L;
-            Set<UUID> givers = new HashSet<>();
-            for (AltRepRecord r : list) {
-                if (!r.target().equals(target)) continue;
-                if (!r.positive() && time - r.timestamp() <= window) {
-                    givers.add(r.giver());
-                }
-            }
-            if (givers.size() >= 2) {
-                SuspiciousRepCase c = new SuspiciousRepCase(target, ipHash, new ArrayList<>(givers), time);
-                suspiciousCases.add(c);
-                notifyStaff(c);
-            }
+    public void resetAll(UUID targetId) {
+        List<Commendation> current = new ArrayList<>(commendationsByTarget.getOrDefault(targetId, List.of()));
+        for (Commendation commendation : current) {
+            removeCommendationLogged(null, commendation.getGiver(), targetId, false);
         }
     }
 
-    private void notifyStaff(SuspiciousRepCase c) {
-        Bukkit.getOnlinePlayers().stream()
-                .filter(p -> p.hasPermission("enthusiacommend.rep.alert"))
-                .forEach(p -> {
-                    String targetArg = resolveTargetArg(c.getTarget());
-                    String inspectCmd = "/rep admin inspect " + targetArg + " " + c.ipHash();
-                    ComponentBuilder builder = new ComponentBuilder("ALT REP ALERT: IP group ")
-                            .color(net.md_5.bungee.api.ChatColor.RED)
-                            .append(c.ipHash())
-                            .color(net.md_5.bungee.api.ChatColor.YELLOW)
-                            .event(new ClickEvent(ClickEvent.Action.RUN_COMMAND, inspectCmd))
-                            .event(new HoverEvent(HoverEvent.Action.SHOW_TEXT,
-                                    new ComponentBuilder("Click to inspect report")
-                                            .color(net.md_5.bungee.api.ChatColor.GRAY)
-                                            .create()))
-                            .append(" accounts ")
-                            .color(net.md_5.bungee.api.ChatColor.RED)
-                            .event((ClickEvent) null)
-                            .event((HoverEvent) null)
-                            .append(formatNames(c.givers()))
-                            .color(net.md_5.bungee.api.ChatColor.WHITE)
-                            .append(" down-repped ")
-                            .color(net.md_5.bungee.api.ChatColor.RED)
-                            .append(nameOf(c.getTarget()))
-                            .color(net.md_5.bungee.api.ChatColor.YELLOW)
-                            .append(".")
-                            .color(net.md_5.bungee.api.ChatColor.RED);
-                    p.spigot().sendMessage(builder.create());
-                }); // brief alert
-    }
-
-    private String formatNames(Collection<UUID> uuids) {
-        List<String> names = new ArrayList<>();
-        for (UUID u : uuids) {
-            names.add(nameOf(u));
+    public String hashIp(String ipAddress) {
+        if (ipAddress == null || ipAddress.isBlank()) {
+            return null;
         }
-        return String.join(", ", names);
-    }
-
-    private String resolveTargetArg(UUID target) {
-        OfflinePlayer off = Bukkit.getOfflinePlayer(target);
-        String name = off != null ? off.getName() : null;
-        return name != null ? name : target.toString();
-    }
-
-    public String hashIp(String ip) {
-        if (ip == null) return null;
         try {
             MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            byte[] bytes = digest.digest(ip.getBytes());
-            StringBuilder sb = new StringBuilder();
+            byte[] bytes = digest.digest(ipAddress.getBytes());
+            StringBuilder builder = new StringBuilder();
             for (int i = 0; i < 8 && i < bytes.length; i++) {
-                sb.append(String.format("%02x", bytes[i]));
+                builder.append(String.format("%02x", bytes[i]));
             }
-            return sb.toString();
-        } catch (NoSuchAlgorithmException e) {
-            return Integer.toHexString(ip.hashCode());
+            return builder.toString();
+        } catch (NoSuchAlgorithmException ignored) {
+            return Integer.toHexString(ipAddress.hashCode());
         }
     }
 
     public List<SuspiciousRepCase> getSuspiciousCases() {
-        return suspiciousCases;
+        return List.copyOf(suspiciousCases);
     }
 
-    public void setRepConfig(RepConfig repConfig) {
-        this.repConfig = repConfig;
+    public List<SuspiciousRepCase> getCasesForTarget(UUID targetId, boolean includeResolved) {
+        return suspiciousCases.stream()
+                .filter(entry -> entry.targetId.equals(targetId))
+                .filter(entry -> includeResolved || !entry.resolved)
+                .toList();
     }
 
-    public RemovedRep removeCommendationLogged(UUID remover, UUID giver, UUID target, boolean applyCooldown) {
-        Commendation removed = removeCommendationInternal(giver, target);
-        if (removed == null) return null;
-        if (applyCooldown) {
-            removalCooldown.put(key(giver, target), System.currentTimeMillis());
-        }
-        RemovedRep record = new RemovedRep(nextRemovalId(), removed, System.currentTimeMillis(), remover);
-        removedLog.add(record);
-        return record;
-    }
-
-    public boolean restoreRemoved(String id) {
-        if (id == null) return false;
-        RemovedRep record = null;
-        for (RemovedRep r : removedLog) {
-            if (id.equalsIgnoreCase(r.id())) {
-                record = r;
-                break;
-            }
-        }
-        if (record == null) return false;
-        Commendation c = record.commendation();
-        if (getCommendation(c.getGiver(), c.getTarget()) != null) {
-            return false; // already exists, refuse to overwrite
-        }
-        cacheCommendation(cloneCommendation(c), true);
-        adjustScore(c.getTarget(), c.isPositive() ? 1 : -1);
-        removalCooldown.remove(key(c.getGiver(), c.getTarget()));
-        removedLog.remove(record);
-        notifyTeleport(c.getTarget());
-        return true;
-    }
-
-    public List<RemovedRep> getRemovedLog() {
-        return List.copyOf(removedLog);
-    }
-
-    private Commendation cloneCommendation(Commendation c) {
-        return new Commendation(c.getGiver(), c.getTarget(), c.isPositive(), c.getCategory(),
-                c.getReasonText(), c.getCreatedAt(), c.getLastEditedAt(), c.getIpHash());
-    }
-
-    private Commendation removeCommendationInternal(UUID giver, UUID target) {
-        Commendation existing = getCommendation(giver, target);
-        if (existing == null) return null;
-        byGiver.computeIfPresent(giver, (g, map) -> {
-            map.remove(target);
-            return map.isEmpty() ? null : map;
-        });
-        byTarget.computeIfPresent(target, (t, list) -> {
-            list.removeIf(cm -> cm.getGiver().equals(giver));
-            return list.isEmpty() ? null : list;
-        });
-        adjustScore(target, existing.isPositive() ? -1 : 1);
-        notifyTeleport(target);
-        return existing;
-    }
-
-    private String nextRemovalId() {
-        return UUID.randomUUID().toString().substring(0, 8);
-    }
-
-    public List<SuspiciousRepCase> getCasesForTarget(UUID target, boolean includeResolved) {
-        List<SuspiciousRepCase> result = new ArrayList<>();
-        for (SuspiciousRepCase c : suspiciousCases) {
-            if (!Objects.equals(c.getTarget(), target)) continue;
-            if (!includeResolved && c.isResolved()) continue;
-            result.add(c);
-        }
-        return result;
-    }
-
-    public boolean resolveCase(UUID target, String ipHash) {
+    public boolean resolveCase(UUID targetId, String ipHash) {
         boolean changed = false;
-        for (SuspiciousRepCase c : suspiciousCases) {
-            if (Objects.equals(c.getTarget(), target) && c.ipHash().equalsIgnoreCase(ipHash)) {
-                c.setResolved(true);
+        for (SuspiciousRepCase entry : suspiciousCases) {
+            if (entry.targetId.equals(targetId) && entry.ipHash.equalsIgnoreCase(ipHash) && !entry.resolved) {
+                entry.resolved = true;
                 changed = true;
             }
         }
         return changed;
     }
 
-    public record AltRepRecord(UUID giver, UUID target, boolean positive, long timestamp, String ipHash) {}
+    public List<RemovedRep> getRemovedLog() {
+        return removedEntries.stream().map(RemovedRep::copy).toList();
+    }
+
+    public boolean restoreRemoved(String id) {
+        if (id == null || id.isBlank()) {
+            return false;
+        }
+        RemovedRep removed = removedEntries.stream()
+                .filter(entry -> id.equalsIgnoreCase(entry.id))
+                .findFirst()
+                .orElse(null);
+        if (removed == null) {
+            return false;
+        }
+
+        Commendation commendation = removed.commendation;
+        if (getCommendation(commendation.getGiver(), commendation.getTarget()) != null) {
+            return false;
+        }
+
+        cacheCommendation(cloneCommendation(commendation), true);
+        applyScore(commendation.getTarget(), getScore(commendation.getTarget()) + (commendation.isPositive() ? 1 : -1), true);
+        removalCooldowns.remove(key(commendation.getGiver(), commendation.getTarget()));
+        removedEntries.remove(removed);
+        dirtyMarker.run();
+        return true;
+    }
+
+    private void cacheCommendation(Commendation commendation, boolean replaceExisting) {
+        commendationsByTarget.computeIfAbsent(commendation.getTarget(), ignored -> new ArrayList<>());
+        commendationsByGiver.computeIfAbsent(commendation.getGiver(), ignored -> new HashMap<>());
+
+        if (replaceExisting) {
+            Commendation previous = commendationsByGiver.get(commendation.getGiver()).get(commendation.getTarget());
+            if (previous != null) {
+                List<Commendation> existing = commendationsByTarget.get(commendation.getTarget());
+                existing.removeIf(entry -> entry.getGiver().equals(commendation.getGiver()));
+            }
+        }
+
+        commendationsByTarget.get(commendation.getTarget()).add(commendation);
+        commendationsByGiver.get(commendation.getGiver()).put(commendation.getTarget(), commendation);
+    }
+
+    private void logAltRecord(String ipHash, UUID giverId, UUID targetId, boolean positive, long timestamp) {
+        if (ipHash == null || ipHash.isBlank()) {
+            return;
+        }
+
+        altRecordsByHash.computeIfAbsent(ipHash, ignored -> new ArrayList<>())
+                .add(new AltRepRecord(giverId, targetId, positive, timestamp, ipHash));
+
+        if (positive) {
+            return;
+        }
+
+        List<AltRepRecord> records = altRecordsByHash.getOrDefault(ipHash, List.of());
+        long windowMillis = 48L * 60L * 60L * 1000L;
+        Set<UUID> givers = new HashSet<>();
+        for (AltRepRecord record : records) {
+            if (!record.targetId.equals(targetId)) {
+                continue;
+            }
+            if (!record.positive && timestamp - record.timestamp <= windowMillis) {
+                givers.add(record.giverId);
+            }
+        }
+
+        if (givers.size() >= 2) {
+            boolean duplicate = suspiciousCases.stream()
+                    .anyMatch(entry -> entry.targetId.equals(targetId) && entry.ipHash.equalsIgnoreCase(ipHash) && !entry.resolved);
+            if (!duplicate) {
+                SuspiciousRepCase created = new SuspiciousRepCase(targetId, ipHash, new ArrayList<>(givers), timestamp, false);
+                suspiciousCases.add(created);
+                notifyStaff(created);
+            }
+        }
+    }
+
+    private void notifyStaff(SuspiciousRepCase caseData) {
+        String targetArg = resolveTargetArgument(caseData.targetId);
+        String inspectCommand = "/rep admin inspect " + targetArg + " " + caseData.ipHash;
+
+        for (Player player : Bukkit.getOnlinePlayers()) {
+            if (!player.hasPermission("enthusiacommend.rep.alert")) {
+                continue;
+            }
+            ComponentBuilder builder = new ComponentBuilder("ALT REP ALERT: IP group ")
+                    .color(net.md_5.bungee.api.ChatColor.RED)
+                    .append(caseData.ipHash)
+                    .color(net.md_5.bungee.api.ChatColor.YELLOW)
+                    .event(new ClickEvent(ClickEvent.Action.RUN_COMMAND, inspectCommand))
+                    .event(new HoverEvent(HoverEvent.Action.SHOW_TEXT,
+                            new ComponentBuilder("Click to inspect report").color(net.md_5.bungee.api.ChatColor.GRAY).create()))
+                    .append(" accounts ")
+                    .color(net.md_5.bungee.api.ChatColor.RED)
+                    .event((ClickEvent) null)
+                    .event((HoverEvent) null)
+                    .append(formatNames(caseData.giverIds))
+                    .color(net.md_5.bungee.api.ChatColor.WHITE)
+                    .append(" down-repped ")
+                    .color(net.md_5.bungee.api.ChatColor.RED)
+                    .append(nameOf(caseData.targetId))
+                    .color(net.md_5.bungee.api.ChatColor.YELLOW)
+                    .append(".")
+                    .color(net.md_5.bungee.api.ChatColor.RED);
+            player.spigot().sendMessage(builder.create());
+        }
+    }
+
+    private String formatNames(Collection<UUID> playerIds) {
+        List<String> names = new ArrayList<>();
+        for (UUID playerId : playerIds) {
+            names.add(nameOf(playerId));
+        }
+        return String.join(", ", names);
+    }
+
+    private String resolveTargetArgument(UUID targetId) {
+        OfflinePlayer player = Bukkit.getOfflinePlayer(targetId);
+        return player.getName() != null ? player.getName() : targetId.toString();
+    }
+
+    private String key(UUID giverId, UUID targetId) {
+        return giverId + "->" + targetId;
+    }
+
+    private Commendation cloneCommendation(Commendation commendation) {
+        return new Commendation(
+                commendation.getGiver(),
+                commendation.getTarget(),
+                commendation.isPositive(),
+                commendation.getCategory(),
+                commendation.getReasonText(),
+                commendation.getCreatedAt(),
+                commendation.getLastEditedAt(),
+                commendation.getIpHash()
+        );
+    }
+
+    private String nextRemovalId() {
+        return UUID.randomUUID().toString().substring(0, 8);
+    }
+
+    private record AltRepRecord(UUID giverId, UUID targetId, boolean positive, long timestamp, String ipHash) {
+    }
 
     public static final class SuspiciousRepCase {
-        private final UUID target;
+        private final UUID targetId;
         private final String ipHash;
-        private final List<UUID> givers;
+        private final List<UUID> giverIds;
         private final long createdAt;
         private boolean resolved;
 
-        public SuspiciousRepCase(UUID target, String ipHash, List<UUID> givers, long createdAt) {
-            this.target = target;
+        public SuspiciousRepCase(UUID targetId, String ipHash, List<UUID> giverIds, long createdAt, boolean resolved) {
+            this.targetId = targetId;
             this.ipHash = ipHash;
-            this.givers = givers;
+            this.giverIds = List.copyOf(giverIds);
             this.createdAt = createdAt;
-            this.resolved = false;
+            this.resolved = resolved;
         }
 
         public UUID getTarget() {
-            return target;
+            return targetId;
         }
 
         public String ipHash() {
@@ -475,7 +489,7 @@ public class RepService {
         }
 
         public List<UUID> givers() {
-            return givers;
+            return giverIds;
         }
 
         public long getCreatedAt() {
@@ -485,33 +499,53 @@ public class RepService {
         public boolean isResolved() {
             return resolved;
         }
+    }
 
-        public void setResolved(boolean resolved) {
-            this.resolved = resolved;
+    public record CommendationResult(boolean success, boolean created, Commendation commendation, long cooldownRemainingMillis, int repDelta) {
+        public static CommendationResult created(Commendation commendation) {
+            return new CommendationResult(true, true, commendation, 0L, commendation.isPositive() ? 1 : -1);
+        }
+
+        public static CommendationResult updated(Commendation commendation, int delta) {
+            return new CommendationResult(true, false, commendation, 0L, delta);
+        }
+
+        public static CommendationResult cooldown(long remainingMillis) {
+            return new CommendationResult(false, false, null, remainingMillis, 0);
         }
     }
 
-    public record CommendationResult(boolean success,
-                                     boolean created,
-                                     Commendation commendation,
-                                     long cooldownRemainingMillis,
-                                     int repDelta) {
-        public static CommendationResult created(Commendation c) {
-            return new CommendationResult(true, true, c, 0, c.isPositive() ? 1 : -1);
+    public static final class RemovedRep {
+        private final String id;
+        private final Commendation commendation;
+        private final long removedAt;
+        private final UUID removedBy;
+
+        public RemovedRep(String id, Commendation commendation, long removedAt, UUID removedBy) {
+            this.id = id;
+            this.commendation = commendation;
+            this.removedAt = removedAt;
+            this.removedBy = removedBy;
         }
 
-        public static CommendationResult updated(Commendation c, int delta) {
-            return new CommendationResult(true, false, c, 0, delta);
+        public String id() {
+            return id;
         }
 
-        public static CommendationResult cooldown(long millis) {
-            return new CommendationResult(false, false, null, millis, 0);
+        public Commendation commendation() {
+            return commendation;
         }
-    }
 
-    public record RemovedRep(String id, Commendation commendation, long removedAt, UUID removedBy) {
+        public long removedAt() {
+            return removedAt;
+        }
+
+        public UUID removedBy() {
+            return removedBy;
+        }
+
         public Map<String, Object> serialize() {
-            Map<String, Object> map = new HashMap<>(commendation.serialize());
+            Map<String, Object> map = new LinkedHashMap<>(commendation.serialize());
             map.put("id", id);
             map.put("removedAt", removedAt);
             if (removedBy != null) {
@@ -522,32 +556,40 @@ public class RepService {
 
         public static RemovedRep fromMap(Map<?, ?> raw) {
             try {
-                Object idObj = raw.get("id");
-                if (idObj == null) return null;
-                String id = idObj.toString();
+                String id = String.valueOf(raw.get("id"));
                 UUID giver = UUID.fromString(String.valueOf(raw.get("giver")));
                 UUID target = UUID.fromString(String.valueOf(raw.get("target")));
-                boolean positive = raw.get("positive") instanceof Boolean b ? b : Boolean.parseBoolean(String.valueOf(raw.get("positive")));
-                String catRaw = String.valueOf(raw.get("category"));
-                RepCategory category = RepCategory.valueOf(catRaw);
+                boolean positive = raw.get("positive") instanceof Boolean flag
+                        ? flag
+                        : Boolean.parseBoolean(String.valueOf(raw.get("positive")));
+                RepCategory category = RepCategory.valueOf(String.valueOf(raw.get("category")));
                 String reason = Objects.toString(raw.get("reason"), "");
-                long createdAt = raw.get("createdAt") instanceof Number n ? n.longValue() : System.currentTimeMillis();
-                long lastEditedAt = raw.get("lastEditedAt") instanceof Number n2 ? n2.longValue() : createdAt;
+                long createdAt = raw.get("createdAt") instanceof Number value ? value.longValue() : Instant.now().toEpochMilli();
+                long lastEditedAt = raw.get("lastEditedAt") instanceof Number value ? value.longValue() : createdAt;
                 String ipHash = raw.get("ipHash") != null ? raw.get("ipHash").toString() : null;
-                Commendation c = new Commendation(giver, target, positive, category, reason, createdAt, lastEditedAt, ipHash);
-                long removedAt = raw.get("removedAt") instanceof Number n3 ? n3.longValue() : System.currentTimeMillis();
+                long removedAt = raw.get("removedAt") instanceof Number value ? value.longValue() : Instant.now().toEpochMilli();
                 UUID removedBy = null;
-                Object rb = raw.get("removedBy");
-                if (rb != null) {
-                    try {
-                        removedBy = UUID.fromString(rb.toString());
-                    } catch (IllegalArgumentException ignored) {
-                    }
+                if (raw.get("removedBy") != null) {
+                    removedBy = UUID.fromString(String.valueOf(raw.get("removedBy")));
                 }
-                return new RemovedRep(id, c, removedAt, removedBy);
-            } catch (Exception ex) {
+                Commendation commendation = new Commendation(giver, target, positive, category, reason, createdAt, lastEditedAt, ipHash);
+                return new RemovedRep(id, commendation, removedAt, removedBy);
+            } catch (Exception ignored) {
                 return null;
             }
+        }
+
+        public RemovedRep copy() {
+            return new RemovedRep(id, new Commendation(
+                    commendation.getGiver(),
+                    commendation.getTarget(),
+                    commendation.isPositive(),
+                    commendation.getCategory(),
+                    commendation.getReasonText(),
+                    commendation.getCreatedAt(),
+                    commendation.getLastEditedAt(),
+                    commendation.getIpHash()
+            ), removedAt, removedBy);
         }
     }
 }
